<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/vote3"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/textView6"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FF0101"
                android:textSize="24sp"
                android:textStyle="normal|bold"
                app:autoSizeMaxTextSize="24dp"
                app:autoSizeMinTextSize="23dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="87dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="120dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:background="#88F0F7F8"
                        android:gravity="center"
                        android:text="@string/textView9"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="220dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:text="@string/editText1"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="79dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="120dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:background="#88F0F7F8"
                        android:gravity="center"
                        android:text="@string/textView11"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="220dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:text="@string/editText2"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="309dp"
                    android:layout_height="48dp"
                    android:layout_margin="30dp"
                    android:background="#88F0F7F8"
                    android:entries="@array/Candidate" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ToggleButton
                        android:id="@+id/toggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:background="#FD0F3AB1"
                        android:text="ToggleButton"
                        android:textColor="@color/white"
                        android:textOff="Accept"
                        android:textOn="Refuse" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/button3"
                        app:backgroundTint="@android:color/holo_red_light"
                        app:rippleColor="@color/black" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>