<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/vote3"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="30dp"
            android:text="Candidate Details"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#88F0F7F8"
                android:gravity="left"
                android:text="@string/can1"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/voteCount1"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#88F0F7F8"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="123dp"
                android:layout_height="45dp"
                android:layout_gravity="center|center_horizontal"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#88F0F7F8"
                android:text="@string/can2"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/voteCount2"
                android:layout_width="247dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#88F0F7F8"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="124dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#88F0F7F8"
                android:text="@string/can3"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/voteCount3"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#88F0F7F8"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="18dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Votingcan"
                android:text="@string/button4"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>